Generate trip using Gemini AI

--- a/.env.local
+++ b/.env.local
@@ -8,4 +8,10 @@ VITE_APPWRITE_API_KEY=standard_fa566d7d6ec0df5c0eebcd069fae185e001e291450180669e
 VITE_APPWRITE_DATABASE_ID=686a76e7003380eaa4ad
 VITE_APPWRITE_USERS_COLLECTION_ID=686a77230023262636fb
 VITE_APPWRITE_TRIPS_COLLECTION_ID=686a77b800369acc5b37
-VITE_APPWRITE_API_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_API_ENDPOINT=https://fra.cloud.appwrite.io/v1
+
+#Gemini
+GEMINI_API_KEY=AIzaSyCRICmozOlNdXcUBar-oJ85ymJE5Y-PUb4
+
+#Unsplash
+UNSPLASH_ACCESS_KEY=--9flzxolUhZli-EiH2AH-wzUFW1dqFtNVEP5DrLAks
